Bug: 810434 Reviewer: Jay Wootton Comment: In the "Manage shares" dialog, allow the column headers to word wrap.

--- a/trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
+++ b/trunk/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtTeaming.css
@@ -33,6 +33,12 @@
 
 .white { color: white !important; }
 
+.whitespace-normal
+{
+	white-space: normal !important;
+}
+	
+
 .blend2-a {
 		background-image: -webkit-linear-gradient(top, #ebf5f5, #abced1) !important; 
 		background-image:    -moz-linear-gradient(top, #ebf5f5, #abced1) !important; 
